--- a/default-function.html
+++ b/default-function.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiple</title>
+    <title>Default Function</title>
 </head>
 
 <body>
     <script type="module">
-        import { company as perusahaan, sum as total, Company as Perusahaan } from './scripts/multiple.js';
 
-        console.info(perusahaan);
-        console.info(total(10, 20));
+        
+        import { default as sayHelloDefault } from './scripts/say-hello.js';
 
-        const a = new Perusahaan();
+        sayHelloDefault('Muflikhan');
+
     </script>
 </body>
 
